--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 
 @font-face {
-  font-family: 'LibraryRecords';
+  font-family: 'LibraryRecords','sans-serif';
   src: url('./assets/LibraryRecordsRegular-qZW66.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
