--- a/fe/src/styles/globals.css
+++ b/fe/src/styles/globals.css
@@ -78,10 +78,12 @@ body {
 
 /* Modal Inputs and Submit Button */
 .modal-input {
-  width: 100%;
-  padding: 0.5rem;
+  background-color: white;
+  color: black;
   border: 1px solid #ccc;
+  padding: 10px;
   border-radius: 4px;
+  width: 100%;
 }
 
 .modal-submit {
